--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +889,7 @@
     "            print('not a polindrome')\n",
     "polindrom('madamm')\n",
     "polindrom('madam')\n",
-    "polindrom('abba')\n",
+    "polindrom('adda')\n",
     "        "
    ]
   },
