--- a/py_course/new.ipynb
+++ b/py_course/new.ipynb
@@ -198,6 +198,198 @@
     "print(fib(10,d))\n",
     "print(d)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a1+j1+a1+y1"
+     ]
+    }
+   ],
+   "source": [
+    "# sr='HHOOCHH'\n",
+    "sr='ajay'\n",
+    "count=1\n",
+    "for i in range(len(sr)):\n",
+    "    if i<len(sr)-1 and sr[i]==sr[i+1]:\n",
+    "        count+=1\n",
+    "    else:\n",
+    "        if i!=len(sr)-1:\n",
+    "            print(f'{sr[i]}{count}+' , end='')\n",
+    "            count=1\n",
+    "        else:\n",
+    "            print(f'{sr[i]}{count}' , end='')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11111 is polindrome\n",
+      "11211 is polindrome\n",
+      "11311 is polindrome\n",
+      "11411 is polindrome\n",
+      "11511 is polindrome\n",
+      "12121 is polindrome\n",
+      "12221 is polindrome\n",
+      "12321 is polindrome\n",
+      "12421 is polindrome\n",
+      "12521 is polindrome\n",
+      "13131 is polindrome\n",
+      "13231 is polindrome\n",
+      "13331 is polindrome\n",
+      "13431 is polindrome\n",
+      "13531 is polindrome\n",
+      "14141 is polindrome\n",
+      "14241 is polindrome\n",
+      "14341 is polindrome\n",
+      "14441 is polindrome\n",
+      "14541 is polindrome\n",
+      "15151 is polindrome\n",
+      "15251 is polindrome\n",
+      "15351 is polindrome\n",
+      "15451 is polindrome\n",
+      "15551 is polindrome\n",
+      "21112 is polindrome\n",
+      "21212 is polindrome\n",
+      "21312 is polindrome\n",
+      "21412 is polindrome\n",
+      "21512 is polindrome\n",
+      "22122 is polindrome\n",
+      "22222 is polindrome\n",
+      "22322 is polindrome\n",
+      "22422 is polindrome\n",
+      "22522 is polindrome\n",
+      "23132 is polindrome\n",
+      "23232 is polindrome\n",
+      "23332 is polindrome\n",
+      "23432 is polindrome\n",
+      "23532 is polindrome\n",
+      "24142 is polindrome\n",
+      "24242 is polindrome\n",
+      "24342 is polindrome\n",
+      "24442 is polindrome\n",
+      "24542 is polindrome\n",
+      "25152 is polindrome\n",
+      "25252 is polindrome\n",
+      "25352 is polindrome\n",
+      "25452 is polindrome\n",
+      "25552 is polindrome\n",
+      "31113 is polindrome\n",
+      "31213 is polindrome\n",
+      "31313 is polindrome\n",
+      "31413 is polindrome\n",
+      "31513 is polindrome\n",
+      "32123 is polindrome\n",
+      "32223 is polindrome\n",
+      "32323 is polindrome\n",
+      "32423 is polindrome\n",
+      "32523 is polindrome\n",
+      "33133 is polindrome\n",
+      "33233 is polindrome\n",
+      "33333 is polindrome\n",
+      "33433 is polindrome\n",
+      "33533 is polindrome\n",
+      "34143 is polindrome\n",
+      "34243 is polindrome\n",
+      "34343 is polindrome\n",
+      "34443 is polindrome\n",
+      "34543 is polindrome\n",
+      "35153 is polindrome\n",
+      "35253 is polindrome\n",
+      "35353 is polindrome\n",
+      "35453 is polindrome\n",
+      "35553 is polindrome\n",
+      "41114 is polindrome\n",
+      "41214 is polindrome\n",
+      "41314 is polindrome\n",
+      "41414 is polindrome\n",
+      "41514 is polindrome\n",
+      "42124 is polindrome\n",
+      "42224 is polindrome\n",
+      "42324 is polindrome\n",
+      "42424 is polindrome\n",
+      "42524 is polindrome\n",
+      "43134 is polindrome\n",
+      "43234 is polindrome\n",
+      "43334 is polindrome\n",
+      "43434 is polindrome\n",
+      "43534 is polindrome\n",
+      "44144 is polindrome\n",
+      "44244 is polindrome\n",
+      "44344 is polindrome\n",
+      "44444 is polindrome\n",
+      "44544 is polindrome\n",
+      "45154 is polindrome\n",
+      "45254 is polindrome\n",
+      "45354 is polindrome\n",
+      "45454 is polindrome\n",
+      "45554 is polindrome\n",
+      "51115 is polindrome\n",
+      "51215 is polindrome\n",
+      "51315 is polindrome\n",
+      "51415 is polindrome\n",
+      "51515 is polindrome\n",
+      "52125 is polindrome\n",
+      "52225 is polindrome\n",
+      "52325 is polindrome\n",
+      "52425 is polindrome\n",
+      "52525 is polindrome\n",
+      "53135 is polindrome\n",
+      "53235 is polindrome\n",
+      "53335 is polindrome\n",
+      "53435 is polindrome\n",
+      "53535 is polindrome\n",
+      "54145 is polindrome\n",
+      "54245 is polindrome\n",
+      "54345 is polindrome\n",
+      "54445 is polindrome\n",
+      "54545 is polindrome\n",
+      "55155 is polindrome\n",
+      "55255 is polindrome\n",
+      "55355 is polindrome\n",
+      "55455 is polindrome\n",
+      "55555 is polindrome\n"
+     ]
+    }
+   ],
+   "source": [
+    "start=0\n",
+    "end=3242415\n",
+    "\n",
+    "st=str(end)\n",
+    "\n",
+    "while start<=end:\n",
+    "    n=start\n",
+    "    temp=n\n",
+    "    res=0\n",
+    "    while n:\n",
+    "        ld=n%10\n",
+    "        res=(res*10)+ld\n",
+    "        n=n//10\n",
+    "    if res==temp:\n",
+    "        c=0\n",
+    "        for i in str(res):\n",
+    "            if i not in st:\n",
+    "                c=1\n",
+    "        if c==0 and len(str(res))==5 :\n",
+    "            print(f'{start} is polindrome')\n",
+    "\n",
+    "    \n",
+    "    start+=1"
+   ]
   }
  ],
  "metadata": {
