--- a/py_course/new.ipynb
+++ b/py_course/new.ipynb
@@ -230,165 +230,176 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11111 is polindrome\n",
-      "11211 is polindrome\n",
-      "11311 is polindrome\n",
-      "11411 is polindrome\n",
-      "11511 is polindrome\n",
-      "12121 is polindrome\n",
-      "12221 is polindrome\n",
-      "12321 is polindrome\n",
-      "12421 is polindrome\n",
-      "12521 is polindrome\n",
-      "13131 is polindrome\n",
-      "13231 is polindrome\n",
-      "13331 is polindrome\n",
-      "13431 is polindrome\n",
-      "13531 is polindrome\n",
-      "14141 is polindrome\n",
-      "14241 is polindrome\n",
-      "14341 is polindrome\n",
-      "14441 is polindrome\n",
-      "14541 is polindrome\n",
-      "15151 is polindrome\n",
-      "15251 is polindrome\n",
-      "15351 is polindrome\n",
-      "15451 is polindrome\n",
-      "15551 is polindrome\n",
-      "21112 is polindrome\n",
-      "21212 is polindrome\n",
-      "21312 is polindrome\n",
-      "21412 is polindrome\n",
-      "21512 is polindrome\n",
-      "22122 is polindrome\n",
-      "22222 is polindrome\n",
-      "22322 is polindrome\n",
-      "22422 is polindrome\n",
-      "22522 is polindrome\n",
-      "23132 is polindrome\n",
-      "23232 is polindrome\n",
-      "23332 is polindrome\n",
-      "23432 is polindrome\n",
-      "23532 is polindrome\n",
-      "24142 is polindrome\n",
-      "24242 is polindrome\n",
-      "24342 is polindrome\n",
-      "24442 is polindrome\n",
-      "24542 is polindrome\n",
-      "25152 is polindrome\n",
-      "25252 is polindrome\n",
-      "25352 is polindrome\n",
-      "25452 is polindrome\n",
-      "25552 is polindrome\n",
-      "31113 is polindrome\n",
-      "31213 is polindrome\n",
-      "31313 is polindrome\n",
-      "31413 is polindrome\n",
-      "31513 is polindrome\n",
-      "32123 is polindrome\n",
-      "32223 is polindrome\n",
-      "32323 is polindrome\n",
-      "32423 is polindrome\n",
-      "32523 is polindrome\n",
-      "33133 is polindrome\n",
-      "33233 is polindrome\n",
-      "33333 is polindrome\n",
-      "33433 is polindrome\n",
-      "33533 is polindrome\n",
-      "34143 is polindrome\n",
-      "34243 is polindrome\n",
-      "34343 is polindrome\n",
-      "34443 is polindrome\n",
-      "34543 is polindrome\n",
-      "35153 is polindrome\n",
-      "35253 is polindrome\n",
-      "35353 is polindrome\n",
-      "35453 is polindrome\n",
-      "35553 is polindrome\n",
-      "41114 is polindrome\n",
-      "41214 is polindrome\n",
-      "41314 is polindrome\n",
-      "41414 is polindrome\n",
-      "41514 is polindrome\n",
-      "42124 is polindrome\n",
-      "42224 is polindrome\n",
-      "42324 is polindrome\n",
-      "42424 is polindrome\n",
-      "42524 is polindrome\n",
-      "43134 is polindrome\n",
-      "43234 is polindrome\n",
-      "43334 is polindrome\n",
-      "43434 is polindrome\n",
-      "43534 is polindrome\n",
-      "44144 is polindrome\n",
-      "44244 is polindrome\n",
-      "44344 is polindrome\n",
-      "44444 is polindrome\n",
-      "44544 is polindrome\n",
-      "45154 is polindrome\n",
-      "45254 is polindrome\n",
-      "45354 is polindrome\n",
-      "45454 is polindrome\n",
-      "45554 is polindrome\n",
-      "51115 is polindrome\n",
-      "51215 is polindrome\n",
-      "51315 is polindrome\n",
-      "51415 is polindrome\n",
-      "51515 is polindrome\n",
-      "52125 is polindrome\n",
-      "52225 is polindrome\n",
-      "52325 is polindrome\n",
-      "52425 is polindrome\n",
-      "52525 is polindrome\n",
-      "53135 is polindrome\n",
-      "53235 is polindrome\n",
-      "53335 is polindrome\n",
-      "53435 is polindrome\n",
-      "53535 is polindrome\n",
-      "54145 is polindrome\n",
-      "54245 is polindrome\n",
-      "54345 is polindrome\n",
-      "54445 is polindrome\n",
-      "54545 is polindrome\n",
-      "55155 is polindrome\n",
-      "55255 is polindrome\n",
-      "55355 is polindrome\n",
-      "55455 is polindrome\n",
-      "55555 is polindrome\n"
+      "3242415\n",
+      "3\n"
      ]
     }
    ],
    "source": [
-    "start=0\n",
-    "end=3242415\n",
+    "def max_toys_to_buy(s):\n",
+    "    max_toys = 0\n",
     "\n",
-    "st=str(end)\n",
+    "    for i in range(len(s)):\n",
+    "        for j in range(i, len(s)):\n",
+    "            substring = s[i:j + 1]\n",
+    "            if substring == substring[::-1]:\n",
+    "                max_toys = max(max_toys, len(substring))\n",
     "\n",
-    "while start<=end:\n",
-    "    n=start\n",
-    "    temp=n\n",
-    "    res=0\n",
-    "    while n:\n",
-    "        ld=n%10\n",
-    "        res=(res*10)+ld\n",
-    "        n=n//10\n",
-    "    if res==temp:\n",
-    "        c=0\n",
-    "        for i in str(res):\n",
-    "            if i not in st:\n",
-    "                c=1\n",
-    "        if c==0 and len(str(res))==5 :\n",
-    "            print(f'{start} is polindrome')\n",
+    "    return max_toys\n",
     "\n",
+    "# Reading input from the user\n",
+    "input_string = input(\"Enter the string of integers: \")\n",
+    "\n",
+    "# Calculating and printing the maximum number of toys Robert has to buy for Charlie\n",
+    "result = max_toys_to_buy(input_string)\n",
+    "print(input_string)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def max_toys_to_buy(s):\n",
+    "    max_toys = 0\n",
+    "\n",
+    "    for i in range(len(s)):\n",
+    "        # Check for odd-length palindromes centered at i\n",
+    "        left, right = i, i\n",
+    "        while left >= 0 and right < len(s) and s[left] == s[right]:\n",
+    "            max_toys = max(max_toys, right - left + 1)\n",
+    "            left -= 1\n",
+    "            right += 1\n",
+    "\n",
+    "        # Check for even-length palindromes centered between i and i+1\n",
+    "        left, right = i, i + 1\n",
+    "        while left >= 0 and right < len(s) and s[left] == s[right]:\n",
+    "            max_toys = max(max_toys, right - left + 1)\n",
+    "            left -= 1\n",
+    "            right += 1\n",
+    "\n",
+    "    return max_toys\n",
+    "\n",
+    "# Read input from the user\n",
+    "s = input().strip()\n",
+    "\n",
+    "# Calculate the maximum number of toys\n",
+    "result = max_toys_to_buy(s)\n",
+    "\n",
+    "# Print the result\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Charlie and his father Robert visited a toy store. Charlie asked his father to buy some toys for him.\n",
+    "\n",
+    "Robert came up with a small activity to test his son's logical ability. He arranges toys in a specific order and asks Charlie to select any number of toys that are adjacent to each other to meet the below condition,\n",
+    "\n",
+    "• It should be possible to arrange selected toys in an order that follows the same pattern from left to right and right to left.\n",
+    "\n",
+    "For example, if the order of the toys is 7121928 (each digit\n",
+    "\n",
+    "indicates a toy), the maximum adjacent toys that can be selected are\n",
+    "\n",
+    "12192, because it is possible to arrange the selected toys as\n",
+    "\n",
+    "12921 or 21912 that follows the same pattern from left to\n",
+    "\n",
+    "right and right to left.\n",
+    "\n",
+    "Robert promises Charlie that if he selects any number of toys following the above condition, he will buy all of those selected toys. Charlie is so excited and wants to select the maximum number of\n",
+    "\n",
+    "toys.\n",
+    "\n",
+    "Your task is to find the maximum number of toys Robert has to buy for Charlie.\n",
+    "\n",
+    "Write a program that reads a string S containing integers and prints the maximum number of toys Robert has to buy for Charlie.\n",
+    "The output should be a single line containing an integer that is th maximum number of toys Robert has to buy for Charlie.\n",
+    "\n",
+    "Explanation\n",
+    "\n",
+    "For example, if the given string.        S = 51224,\n",
+    "\n",
+    "• Charlie can select the toys 122, as it is possible to arrange them as 212 that follows the same pattern from left to righ and right to left.\n",
+    "\n",
+    "• Charlie can select the toys 224, as it is possible to arrange\n",
+    "\n",
+    "them as 242 that follows the same pattern from left to righ\n",
+    "\n",
+    "and right to left.\n",
+    "\n",
+    "• In both cases, the maximum number of toys that Robert has to buy for Charlie is 3.\n",
+    "\n",
+    "The output should be 3.\n",
+    "\n",
+    "Sample Input 1\n",
+    "\n",
+    "51224\n",
+    "\n",
+    "Sample Output 1\n",
+    "\n",
+    "3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "toys='3242415'\n",
+    "def bey(coll):\n",
+    "    if len(coll)==0:\n",
+    "        return 0\n",
+    "    elif len(coll)==1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        uni={}\n",
+    "        for i in coll:\n",
+    "            if i not in uni:\n",
+    "                uni[i]=1\n",
+    "            else:\n",
+    "                uni[i]+=1\n",
+    "        # print(uni)\n",
+    "        count=1\n",
+    "        for i in uni:\n",
+    "            if uni[i]%2==0 :\n",
+    "                count+=uni[i]\n",
+    "            elif uni[i]>1:\n",
+    "                count+=uni[i]-1\n",
+    "        return count\n",
+    "max_toys_to_buy=bey(toys)\n",
+    "print(max_toys_to_buy)\n",
     "    \n",
-    "    start+=1"
+    "    "
    ]
   }
  ],
