--- a/py_course/multithredding/multitheding.ipynb
+++ b/py_course/multithredding/multitheding.ipynb
@@ -48,7 +48,7 @@
     "2. by extending or inheriting thread class\n",
     "NOTE: \n",
     ". python provides inbuilt module \"threading\" to provide support for developing and managing threads.\n",
-    ". every puthon program is one thread implicitly -- main() by default main thread will execute automatically.\n",
+    ". every python program is one thread implicitly -- main() by default main thread will execute automatically.\n",
     "\n",
     "MAIN THREAD:\n",
     "1. WHAT IS THE Thread:\n",
