--- a/py_course/package_architecture/package_archtcture.ipynb
+++ b/py_course/package_architecture/package_archtcture.ipynb
@@ -14,7 +14,7 @@
     "package:\n",
     "1. package is a directory (folder) \n",
     "2. it containes one  __init__.py file and set of python modules \n",
-    "3. each pachage represent specific mechanism\n",
+    "3. each package represent specific mechanism\n",
     "\n",
     "__init__.py:\n",
     "1. it is a object file or constructor file or initialization file\n",
