--- a/py_course/functional_pro/File_handling/csv_file.ipynb
+++ b/py_course/functional_pro/File_handling/csv_file.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import csv\n",
     "fp=open('student.csv','w',newline='\\n')\n",
-    "filewrite=csv.writer(fp)        #it accept file pointer address and returns weiter object\n",
+    "filewrite=csv.writer(fp)        #it accept file pointer address and returns writer object\n",
     "filewrite.writerow(['sid','name','phone','marks']) #it insert only one record\n",
     "fp.close()"
    ]
