--- a/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/patterns.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/patterns.ipynb
@@ -644,6 +644,38 @@
     "            print(' ', end=' ')\n",
     "    print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* \n",
+      "* * \n",
+      "* * * \n",
+      "* * * * \n",
+      "* * * * * \n",
+      "* * * * \n",
+      "* * * \n",
+      "* * \n",
+      "* \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,10):\n",
+    "    if i<=10//2:\n",
+    "        for j in range(i):\n",
+    "            print('*',end=' ')\n",
+    "    else:\n",
+    "        for j in range(10-i):\n",
+    "            print('*',end=' ')\n",
+    "    print()"
+   ]
   }
  ],
  "metadata": {
