--- a/py_course/new.ipynb
+++ b/py_course/new.ipynb
@@ -401,6 +401,98 @@
     "    \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "{10: 4, 20: 3, 30: 1, 50: 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr=[10,20,20,10,10,30,50,10,20]\n",
+    "d={}\n",
+    "for i in arr:\n",
+    "    if i not in d:\n",
+    "        d[i]=1\n",
+    "    else:\n",
+    "        d[i]+=1\n",
+    "pair=0\n",
+    "for i in d:\n",
+    "    if d[i]%2==0:\n",
+    "        pair+=d[i]//2\n",
+    "    else:\n",
+    "        pair+=(d[i]-1)//2\n",
+    "print(pair)\n",
+    "print(d)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "li=[3,4,21,36,10,28,35,24,42]\n",
+    "li=[10,5,20,20,4,5,2,25,1]\n",
+    "min,max=li[0],li[0]\n",
+    "lb=0;mb=0\n",
+    "for i in li:\n",
+    "    if i>max:\n",
+    "        mb+=1\n",
+    "        max=i\n",
+    "    elif i<min:\n",
+    "        lb+=1\n",
+    "        min=i\n",
+    "print(mb,lb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 6, 9, 12, 18, 36]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#find factors\n",
+    "import math\n",
+    "def print_factors(n):\n",
+    "    factors=[]\n",
+    "    for i in range(1,int(math.sqrt(n))+1):\n",
+    "        if n%i==0:\n",
+    "            factors.append(i)\n",
+    "            if n/i!=i:\n",
+    "                factors.append(int(n/i))\n",
+    "    # print(factors)\n",
+    "    return factors\n",
+    "num=36\n",
+    "sorted(print_factors(num))"
+   ]
   }
  ],
  "metadata": {
