--- a/py_course/new.ipynb
+++ b/py_course/new.ipynb
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -464,16 +464,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 2, 3, 4, 6, 9, 12, 18, 36]"
+       "([1, 36, 2, 18, 3, 12, 4, 9, 6], 6)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,9 +489,36 @@
     "            if n/i!=i:\n",
     "                factors.append(int(n/i))\n",
     "    # print(factors)\n",
-    "    return factors\n",
+    "    return factors ,i\n",
     "num=36\n",
-    "sorted(print_factors(num))"
+    "print_factors(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 33, 3, 11} 11\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=33\n",
+    "#find factors\n",
+    "s=set()\n",
+    "for i in range(1,n+1):\n",
+    "    if n%i==0 :\n",
+    "        s|={i}\n",
+    "        if n/i!=i:\n",
+    "            s|={int(n/i)}\n",
+    "        if n/i<=i:\n",
+    "            break\n",
+    "print(s,i)"
    ]
   }
  ],
