--- a/py_course/ADSH.ipynb
+++ b/py_course/ADSH.ipynb
@@ -176,6 +176,134 @@
     "res=cur1.fetchall()\n",
     "print(res)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 1, 2, 3, 4, 5, 6, 7, 8, 9)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def loop():\n",
+    "    for i in range(10):\n",
+    "        yield i\n",
+    "    \n",
+    "a=loop()\n",
+    "# print(list(a))\n",
+    "print(tuple(a))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 2, 'b': 2, 'c': 2, 'd': 1, 'e': 2, 'f': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "s='abcdefabcef'\n",
+    "dic={}\n",
+    "for i in s:\n",
+    "    if i not in dic:\n",
+    "        dic[i]=1\n",
+    "    else:\n",
+    "        dic[i]+=1\n",
+    "print(dic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 2, 'b': 2, 'c': 2, 'd': 1, 'e': 2, 'f': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "s='abcdefabcef'\n",
+    "var={i:s.count(i) for i in s}\n",
+    "print(var)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "first line\n",
+      "last line\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "def outer(fuc):\n",
+    "    def inner():\n",
+    "        print('first line')\n",
+    "        fuc()\n",
+    "        print('last line')\n",
+    "    return inner\n",
+    "\n",
+    "@outer\n",
+    "def sample():\n",
+    "    # print('added line')\n",
+    "    time.sleep(5)\n",
+    "\n",
+    "sample()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'abc': 3, 'efg': 3, 'dhj': 3, 'klm': 3, 'nopqr': 5, 'st': 2, 'uvw': 3, '23456': 5, '890': 3, 'xyz': 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "e='abc efg dhj klm nopqr st uvw 23456 890 xyz'\n",
+    "#o/p \n",
+    "# dic={'abc':3,'efg':3,'dhj':3,'klm':3,'nopqr':5,'st':2,'uvw':3,'23456':5,'890':3,'xyz':3}\n",
+    "var=''\n",
+    "dic={}\n",
+    "for i in e:\n",
+    "    if i!=' ':\n",
+    "        var=var+i\n",
+    "    else:\n",
+    "        if len(var)!=0:\n",
+    "            dic[var]=len(var)\n",
+    "        var=''\n",
+    "if len(var)!=0:\n",
+    "    dic[var]=len(var)\n",
+    "print(dic)"
+   ]
   }
  ],
  "metadata": {
