--- a/py_course/practice.ipynb
+++ b/py_course/practice.ipynb
@@ -21,20 +21,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 2\n"
+      "['10', '20', '55', '66']\n",
+      "(10, 20, 55, 66)\n",
+      "-1897531453665880182\n"
      ]
     }
    ],
    "source": [
-    "i, c = input().split()\n",
-    "print(i,c)"
+    "# i, c = input().split()\n",
+    "# print(i,c)\n",
+    "integers = input().split()\n",
+    "print(integers)\n",
+    "t = tuple(map(int, integers))\n",
+    "print(t)\n",
+    "print(hash(t))"
    ]
   },
   {
@@ -114,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "undefined.undefined.undefined"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
