--- a/py_course/practice.ipynb
+++ b/py_course/practice.ipynb
@@ -103,6 +103,46 @@
     "output=leap(num)\n",
     "print(output)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "#find nth greatest value in the collection\n",
+    "collection=eval(input('enter the list collection'))\n",
+    "nth_num=int(input('enter the finding gt_number'))\n",
+    "\n",
+    "def find_gt(cll):\n",
+    "    large=cll[0]\n",
+    "    for i in cll:\n",
+    "        if i>large:\n",
+    "            large=i\n",
+    "    collection.remove(large)\n",
+    "    return large\n",
+    "\n",
+    "if 1<=nth_num<=len(collection):\n",
+    "    for i in range(nth_num):\n",
+    "        final=find_gt(collection)\n",
+    "    print(final)\n",
+    "\n",
+    "elif nth_num>len(collection):\n",
+    "    final=find_gt(collection)\n",
+    "    print(final)\n",
+    "else:\n",
+    "    for i in range(len(collection)):\n",
+    "        final=find_gt(collection)\n",
+    "    print(final)\n"
+   ]
   }
  ],
  "metadata": {
