--- a/py_course/flow_control_statements/1.Decisional&Conditional_statements/1.simple_if.ipynb
+++ b/py_course/flow_control_statements/1.Decisional&Conditional_statements/1.simple_if.ipynb
@@ -22,6 +22,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number is 0 to uyiu\n"
+     ]
+    }
+   ],
+   "source": [
+    "num=8\n",
+    "if 0<=num<=9:\n",
+    "    if 5<=num<=7:\n",
+    "        print('number is 5 to 7')\n",
+    "        if 8<=num<=9:\n",
+    "            print('number between 8 to 9')\n",
+    "    else:\n",
+    "        print('number is 0 to uyiu')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -42,22 +66,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fizz\n"
+      "imran\n"
      ]
     }
    ],
    "source": [
-    "#3:wap to check whether the given number is divisible by 3 or not if print fizz\n",
+    "#3:wap to check whether the given number is divisible by 3 or not if divisible then print imran\n",
     "n=39\n",
     "if(n%3==0):\n",
-    "    print('fizz')"
+    "    print('imran')"
    ]
   },
   {
