--- a/py_course/practice.ipynb
+++ b/py_course/practice.ipynb
@@ -118,7 +118,7 @@
     }
    ],
    "source": [
-    "#find nth greatest value in the collection\n",
+    "#find nth greatest number in the collection\n",
     "collection=eval(input('enter the list collection'))\n",
     "nth_num=int(input('enter the finding gt_number'))\n",
     "\n",
@@ -142,6 +142,34 @@
     "    for i in range(len(collection)):\n",
     "        final=find_gt(collection)\n",
     "    print(final)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "56\n",
+      "56\n"
+     ]
+    }
+   ],
+   "source": [
+    "#IBM: Hacker Rank\n",
+    "print(5+6+7+8+9+7+8+6)\n",
+    "def sum(i,j,k):\n",
+    "    add=0\n",
+    "    for a in range(i,j+1):\n",
+    "        add+=a\n",
+    "    for b in range(k,j):\n",
+    "        add+=b\n",
+    "    return add\n",
+    "result=sum(5,9,6)\n",
+    "print(result)\n"
    ]
   }
  ],
