--- a/py_course/practice.ipynb
+++ b/py_course/practice.ipynb
@@ -171,6 +171,33 @@
     "result=sum(5,9,6)\n",
     "print(result)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Accenture: \n",
+    "# In a mobile game, your character has two keys K1 and K2 represented by strings. The character has to navigate through a maze\n",
+    "# field and upon reaching the end he has to open a gate to finish the game. The gate is locked and can only be opened when \n",
+    "# the character inputs a passcode. The passcode is the count of substrings common between the two keys. You task is to find and\n",
+    "# return an integer value representing the count of common substrings.\n",
+    "# NOTE: A single substring for both the keys con only be counted once.\n",
+    "\n",
+    "#input specification:\n",
+    "''' input1: A string value k1, representing the first key.\n",
+    "    input2: A string value k2, representing the second key.'''\n",
+    "#output specification:\n",
+    "''' Return an integer value representing the count of common substrings. '''\n",
+    "\n",
+    "#Example 1:\n",
+    "''' \n",
+    "    input1: abcdxyz \n",
+    "    input2: xyzabcd\n",
+    "'''\n",
+    "#Output: 16"
+   ]
   }
  ],
  "metadata": {
