--- a/py_course/practice.ipynb
+++ b/py_course/practice.ipynb
@@ -174,16 +174,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 1, 'b': 2, 'c': 3, 'd': 4, 'x': 5, 'y': 6, 'z': 7, 'ab': 8, 'bc': 9, 'cd': 10, 'xy': 11, 'yz': 12, 'abc': 13, 'bcd': 14, 'xyz': 15, 'abcd': 16}\n",
+      "16\n"
+     ]
+    }
+   ],
    "source": [
     "#Accenture: \n",
     "# In a mobile game, your character has two keys K1 and K2 represented by strings. The character has to navigate through a maze\n",
     "# field and upon reaching the end he has to open a gate to finish the game. The gate is locked and can only be opened when \n",
     "# the character inputs a passcode. The passcode is the count of substrings common between the two keys. You task is to find and\n",
     "# return an integer value representing the count of common substrings.\n",
-    "# NOTE: A single substring for both the keys con only be counted once.\n",
+    "# NOTE: A single substring for both the keys can only be counted once.\n",
     "\n",
     "#input specification:\n",
     "''' input1: A string value k1, representing the first key.\n",
@@ -196,7 +205,22 @@
     "    input1: abcdxyz \n",
     "    input2: xyzabcd\n",
     "'''\n",
-    "#Output: 16"
+    "#Output: 16\n",
+    "\n",
+    "k1='abcdxyz'\n",
+    "k2='xyzabcd'\n",
+    "count=0\n",
+    "note={}\n",
+    "for i in range(1,len(k1)+1):\n",
+    "    # print(i)\n",
+    "    for ii in range(len(k1)):\n",
+    "        if k1[ii:ii+i] in k2 and len(k1[ii:ii+i])==i and k1[ii:ii+i] not in note:\n",
+    "            count+=1\n",
+    "            note[k1[ii:ii+i]]=count\n",
+    "        # print(k1[ii:ii+i],count) \n",
+    "        # print(count)\n",
+    "print(note)\n",
+    "print(count)\n"
    ]
   }
  ],
