--- a/py_course/practice.ipynb
+++ b/py_course/practice.ipynb
@@ -21,16 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['10', '20', '55', '66']\n",
-      "(10, 20, 55, 66)\n",
-      "-1897531453665880182\n"
+      "['1', '2']\n",
+      "(1, 2)\n",
+      "-3550055125485641917\n"
      ]
     }
    ],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -221,6 +221,16 @@
     "        # print(count)\n",
     "print(note)\n",
     "print(count)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "pattern:\n",
+    "7 8 9\n",
+    "6 1 2\n",
+    "5 4 3"
    ]
   }
  ],
