--- a/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/patterns.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/patterns.ipynb
@@ -676,6 +676,45 @@
     "            print('*',end=' ')\n",
     "    print()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7 8 9\n",
+    "6 1 2\n",
+    "5 4 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 8 9 \n",
+      "6 7 8 \n",
+      "5 6 7 \n"
+     ]
+    }
+   ],
+   "source": [
+    "n=3\n",
+    "# for i in range(n):\n",
+    "#     for j in range(1,n+1):\n",
+    "#         print(9-i-(n-j),end=' ')\n",
+    "#     print()\n",
+    "for i in range(n):\n",
+    "    sun=3\n",
+    "    for j in range(n):\n",
+    "        print(10-sun-i,end=' ')\n",
+    "        sun-=1\n",
+    "    print()\n",
+    "# incomplete!!!!!!!!!!"
+   ]
   }
  ],
  "metadata": {
